force-app/main/default/objects/Contact/fields/Chat_Active__c.field-meta.xml
<CustomField>
    <fullName>Chat_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chat_Active</label>
    <type>Checkbox</type>
</CustomField>