force-app/main/default/objects/Contact/fields/MediumPhotoUrl__c.field-meta.xml
<CustomField>
    <fullName>MediumPhotoUrl__c</fullName>
    <label>MediumPhotoUrl</label>
    <type>Url</type>
</CustomField>