force-app/main/default/objects/Contact/fields/Personal_discont__c.field-meta.xml
<CustomField>
    <fullName>Personal_discont__c</fullName>
    <label>Personal discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>